# QtQuickStyleSandbox

./: .gitlab-ci.yml  .gitmodules  Buttons.qml  CMakeLists.txt  Colors.qml  Main.qml  Page1.qml  Page2.qml  Page3.qml  README.md  Texts.qml  main.cpp
